# mq-workload-generator

./: Cargo.toml  Dockerfile  README.md  deployment-consumer.yaml  deployment-producer.yaml  mq-pressure-generator-consumer.yaml  mq-pressure-generator-producer.yaml  mq-workload-generator-consumer.yaml  mq-workload-generator-producer.yaml
.run/: Run producer and consumer.run.xml
src/: common.rs  kafka.rs  main.rs  rmq.rs
